# social-cli

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
docs/: api-integration.md  architecture.md  security.md  setup.md  usage.md
src/: bluesky.rs  editor.rs  main.rs  threads.rs  x.rs
