[package]
name = "social-cli"
version = "0.1.0"
edition = "2021"
authors = ["kskwtnk"]
description = "Multi-platform social media posting CLI tool"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# 非同期
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Bluesky API
atrium-api = "0.24"
atrium-xrpc-client = "0.5"

# シリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 環境変数
dotenvy = "0.15"

# エラー処理
anyhow = "1.0"

# 日付・時刻
chrono = "0.4"

# X (Twitter) API
reqwest-oauth1 = "0.3.0"
